--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.11",
+    "@react-three/postprocessing": "^2.15.11",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
+    "gsap": "^3.12.3",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@react-three/fiber": "^8.15.11",
-    "@react-three/drei": "^9.88.17",
-    "@react-three/postprocessing": "^2.15.11",
-    "three": "^0.159.0",
-    "gsap": "^3.12.3",
-    "framer-motion": "^10.16.16",
-    "lottie-react": "^2.4.0",
+    "react-router-dom": "^7.7.1",
     "react-spring": "^9.7.3",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
