--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.3",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.1",
     "react-spring": "^9.7.3",
     "tailwind-merge": "^2.1.0",
